tests/invalid/Function_Invalid_4.whiley
method g(int x) -> int:
    return x

function f(int x) -> int:
    return g(x)
